Fix footer, fix padding on small screen-sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Overflow-x together with margin 0 and padding 0 removes a white space from the right side of the screen */
 html, body {
     width: 100%;
     margin: 0;
@@ -226,13 +227,15 @@ textarea {
 .media-logos li {
     list-style-type: none;
     display: inline;
-    padding: 20px;
+    padding: 20px 20px 0 20px;
 }
 .media-logos i {
     font-size: 250%;
     color: #f1efef;
-    padding: 30px;
+    padding: 30px 30px 15px 30px;
     box-sizing: border-box;
+    position: relative;
+    right: 3px;
 }
 /* Adpated for 13 inch laptop width */
 @media screen and (max-width: 1280px) {
@@ -283,6 +286,14 @@ textarea {
     }
     .map-header {
         font-size: 1.0rem;
+        margin-bottom: 10px;
+    }
+    .form input,
+    textarea {
+        margin-bottom: 0;
+    }
+    .submit {
+        margin-top: 15px;
     }
     .article {
         font-size: 1rem;
@@ -339,7 +350,7 @@ textarea {
     }
     .nav-bottom a {
         font-size: 1.1rem;
-        padding: 30px 15px 20px 15px;
+        padding: 30px 10px 20px 10px;
         position: relative;
         right: 40px;
     }
@@ -351,14 +362,14 @@ textarea {
     }
     .footer h2 {
         color: #f1efef;
-        padding: 45px 45px;
+        padding: 45px 0 20px 0;
         text-align: center;
         font-size: 1.2rem;
     }
     .media-logos i {
         font-size: 200%;
         color: #f1efef;
-        padding: 30px 0 0 0;
+        padding: 20px 0 20px 0;
         position: relative;
         right: 45px;
     }
